2001-08-10  Juergen Vigna  <jug@sad.it>

	* insettabular.C (calculate_dimensions_of_cells): let's try to call
	update only for fixed with cells.

	* insettext.C (update): comment this out as it seems first wrong
	and second not needed anymore!
	(some functions): call reinitLyXText() only in update() in all other
	positions set only need_update = INIT.

2001-08-08  Juergen Vigna  <jug@sad.it>

	* insettabular.C (setPos): fixed wrong actrow < rows() check.

	* insettext.C (insetUnlock): remove double-space on inset unlock.

	* insetcollapsable.C (draw): fix returned x when label > inset-width.

	* insettabular.C (update): fixed cursor positon after an insert.
	(insetAllowed): do not allow to insert insets when not inside the
	inset!
	(draw): clear below an inset too as it could have changed height.

	* inset.C (getMaxWidth): fixed width for inset in inset.

	* insettext.C (update): small fix.

	* insettabular.C (tabularFeatures): added selection support to
	DELETE_ROW/DELETE_COLUMN.

2001-08-07  Juergen Vigna  <jug@sad.it>

	* inset.C (getMaxWidth): recoded and all it's implementations!

	* insettext.C (init,setParagraph+constructors): cleanups
	(reinitLyXText): fixed problem with wrong cursor when all paragraphs
	are new and I want do a save/restore of the cursor position which is
	not possible anymore.

	* insetcollapsable.C (searchBackward): recollapse inset if not found.
	(searchBackward): ditto
	(selectNextWord): ditto

2001-08-07  Angus Leeming  <a.leeming@ic.ac.uk>

	* insetlatexaccent.C (checkContents): Add some debug messages

2001-08-07  Juergen Vigna  <jug@sad.it>

	* insetert.C (read): don't use InsetCollapsable::read as we don't
	write the collapsed status anymore only the status.
	(write): ditto.

2001-08-06  Juergen Vigna  <jug@sad.it>

	* insetert.C (set_latex_font): use LyXText's setFont directly.

	* insettext.C (drawFrame): fixed one time more the right position
	and size of the frame!

	* insetert.C (~InsetERT): hide the dialog.